src/riot-rs-macros/tests/ui/task/incorrect_fn_peripheral_param_type.stderr
error[E0308]: mismatched types
 --> tests/ui/task/incorrect_fn_peripheral_param_type.rs:7:1
  |
7 | #[riot_rs::task(autostart, peripherals)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Bar`, found `Peripherals`
8 | async fn main(_foo: Bar) {}
  |          ---- arguments to this function are incorrect
  |
note: function defined here
 --> tests/ui/task/incorrect_fn_peripheral_param_type.rs:8:10
  |
8 | async fn main(_foo: Bar) {}
  |          ^^^^ ---------
  = note: this error originates in the attribute macro `riot_rs::task` (in Nightly builds, run with -Z macro-backtrace for more info)
